Configure Java 17