@@ -25,97 +25,98 @@ import java.util.List;
 @EnableMethodSecurity
 public class SecurityConfig {
 
-    @Autowired
-    private JwtAuthenticationFilter jwtAuthenticationFilter;
+        @Autowired
+        private JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+        @Bean
+        public PasswordEncoder passwordEncoder() {
+                return new BCryptPasswordEncoder();
+        }
 
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
-        return authConfig.getAuthenticationManager();
-    }
+        @Bean
+        public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
+                return authConfig.getAuthenticationManager();
+        }
 
-    @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http
-                // Configurar CORS primero
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        @Bean
+        public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+                http
+                                // ✅ CORS configurado primero
+                                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-                // Deshabilitar CSRF (necesario para APIs REST)
-                .csrf(csrf -> csrf.disable())
+                                // ✅ CSRF deshabilitado para APIs REST
+                                .csrf(csrf -> csrf.disable())
 
-                // Política de sesión stateless (JWT)
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                                // ✅ Sesiones stateless (JWT)
+                                .sessionManagement(session -> session
+                                                .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
-                // Configuración de autorización
-                .authorizeHttpRequests(auth -> auth
-                        // Endpoints públicos - NO requieren autenticación
-                        .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/api/productos/**").permitAll()
-                        .requestMatchers("/api/pedidos").permitAll() // POST crear pedido anónimo
+                                // ✅ CONFIGURACIÓN DE AUTORIZACIÓN - CORREGIDA
+                                .authorizeHttpRequests(auth -> auth
+                                                // 🔓 Endpoints PÚBLICOS (sin autenticación)
+                                                .requestMatchers("/api/auth/**").permitAll() // Login y registro
+                                                .requestMatchers("/api/productos/**").permitAll() // Ver productos
+                                                .requestMatchers("/api/pedidos").permitAll() // Crear pedido anónimo
+                                                                                             // (POST)
+                                                .requestMatchers("/h2-console/**").permitAll() // Consola H2
 
-                        // Consola H2 - COMPLETAMENTE PÚBLICA (solo para desarrollo)
-                        .requestMatchers("/h2-console/**").permitAll()
+                                                // 🔒 Endpoints que requieren ROL ADMIN
+                                                .requestMatchers("/api/pedidos/{id}/**").hasRole("ADMIN")
+                                                .requestMatchers("/api/usuarios").hasRole("ADMIN") // Listar usuarios
+                                                .requestMatchers("/api/admin/**").hasRole("ADMIN")
 
-                        // Endpoints que requieren rol ADMIN
-                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                        .requestMatchers("/api/pedidos/{id}/**").hasRole("ADMIN")
-                        .requestMatchers("/api/usuarios").hasRole("ADMIN")
+                                                // 🔐 Endpoints que requieren autenticación (USER o ADMIN)
+                                                .requestMatchers("/api/pedidos/mis-pedidos").authenticated()
+                                                .requestMatchers("/api/usuarios/perfil/**").authenticated()
+                                                .requestMatchers("/api/usuarios/cambiar-password").authenticated()
 
-                        // Endpoints que requieren autenticación (USER o ADMIN)
-                        .requestMatchers("/api/pedidos/mis-pedidos").authenticated()
-                        .requestMatchers("/api/usuarios/perfil").authenticated()
-                        .requestMatchers("/api/usuarios/perfil/**").authenticated()
-                        .requestMatchers("/api/usuarios/cambiar-password").authenticated()
+                                                // ⚠️ Cualquier otra petición requiere autenticación
+                                                .anyRequest().authenticated())
 
-                        // Cualquier otra request requiere autenticación
-                        .anyRequest().authenticated())
+                                // ✅ Headers para H2 Console
+                                .headers(headers -> headers
+                                                .frameOptions(frame -> frame.disable()));
 
-                // Deshabilitar frameOptions para H2 Console
-                .headers(headers -> headers
-                        .frameOptions(frame -> frame.disable()));
+                // ✅ Agregar filtro JWT
+                http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
-        // Agregar filtro JWT antes del filtro de autenticación estándar
-        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                return http.build();
+        }
 
-        return http.build();
-    }
+        @Bean
+        public CorsConfigurationSource corsConfigurationSource() {
+                CorsConfiguration configuration = new CorsConfiguration();
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
+                // ✅ Permitir múltiples orígenes (frontend)
+                configuration.setAllowedOrigins(Arrays.asList(
+                                "http://localhost:5500",
+                                "http://127.0.0.1:5500",
+                                "http://localhost:8080",
+                                "http://127.0.0.1:8080",
+                                "http://localhost:3000", // Por si usas React/Vue
+                                "*" // ⚠️ SOLO para desarrollo, quitar en producción
+                ));
 
-        // Permitir múltiples orígenes
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5500",
-                "http://127.0.0.1:5500",
-                "http://localhost:8080",
-                "http://127.0.0.1:8080"));
+                // ✅ Métodos HTTP permitidos
+                configuration.setAllowedMethods(Arrays.asList(
+                                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
 
-        // Permitir todos los métodos HTTP
-        configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+                // ✅ Headers permitidos
+                configuration.setAllowedHeaders(List.of("*"));
 
-        // Permitir todos los headers
-        configuration.setAllowedHeaders(List.of("*"));
+                // ✅ Credenciales permitidas
+                configuration.setAllowCredentials(true);
 
-        // Permitir credenciales
-        configuration.setAllowCredentials(true);
+                // ✅ Headers expuestos
+                configuration.setExposedHeaders(Arrays.asList(
+                                "Authorization",
+                                "Content-Type"));
 
-        // Exponer headers de autorización
-        configuration.setExposedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type"));
+                // ✅ Cache de preflight
+                configuration.setMaxAge(3600L);
 
-        // Tiempo de cache para preflight requests
-        configuration.setMaxAge(3600L);
-
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", configuration);
+                return source;
+        }
 }
